--- a/src/Components/Area/Area.scss
+++ b/src/Components/Area/Area.scss
@@ -256,6 +256,11 @@ li {
     max-width: 330px;
     display: inline-block;
   }
+  .imagediv {
+    height: 13vw;
+    align-items: center;
+    display: inline-flex;
+  }
   .imageArea {
     padding: 0.5vw;
     width: 100%;
