--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -35,7 +35,8 @@
 
     .erros {
       color: red;
-      font-size: 3vw;
+      font-size: 1.8vw;
+      padding: 0.5vw;
     }
 
     .submitButton {
@@ -108,7 +109,8 @@
 
     .erros {
       color: red;
-      font-size: 3vw;
+      font-size: 1.5vw;
+      padding: 0.5vw;
     }
 
     .submitButton {
@@ -181,7 +183,8 @@
 
     .erros {
       color: red;
-      font-size: 3vw;
+      font-size: 1.2vw;
+      padding: 0.5vw;
     }
 
     .submitButton {
@@ -255,7 +258,8 @@
 
     .erros {
       color: red;
-      font-size: 3vw;
+      font-size: 0.8vw;
+      padding: 0.5vw;
     }
 
     .submitButton {
