--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -458,7 +458,8 @@
   h4 {
     font-size: 1.2vw;
     color: #333;
-    padding: 2vw 2vw 2vw 0;
+    padding: 2vw 2vw 2vw 2vw;
+    text-align: center;
   }
 
   h2 {
