--- a/src/Components/Furniture/Furniture.scss
+++ b/src/Components/Furniture/Furniture.scss
@@ -8,10 +8,11 @@
     line-height: 5vw;
 
     .imageFurniture {
-      width: 25vw;
+      width: 20vw;
+      height: auto !important;
       background-color: white;
-      max-width: 200px;
-      max-height: 200px;
+      max-width: 150px;
+      max-height: 150px;
       padding-bottom: 3vw;
     }
 
@@ -83,7 +84,8 @@
     line-height: 3vw;
 
     .imageFurniture {
-      width: 15vw;
+      width: 10vw;
+      height: auto !important;
       background-color: white;
       max-width: 200px;
       max-height: 150px;
@@ -163,7 +165,8 @@
     line-height: 2.5vw;
 
     .imageFurniture {
-      width: 10vw;
+      width: 8vw;
+      height: auto !important;
       background-color: white;
       max-width: 200px;
       max-height: 150px;
@@ -243,7 +246,8 @@
     line-height: 1.5vw;
 
     .imageFurniture {
-      width: 8vw;
+      width: 6vw;
+      height: auto !important;
       background-color: white;
       max-width: 200px;
       max-height: 150px;
