--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -5,7 +5,7 @@
       font-weight: 600;
       color: #333;
       padding-top: 3vw;
-      padding-bottom: 7vw;
+      padding-bottom: 2vw;
       height: 1vw;
     }
 
@@ -49,8 +49,9 @@
       margin: 1vw;
       border: transparent;
       color: black;
-      margin-top: 5vw;
+      margin-top: 8vw;
       margin-bottom: 2vw;
+      z-index: 10;
     }
 
     .buttonTopForm {
@@ -96,7 +97,7 @@
     }
 
     input {
-      padding: 1.5vw 4vw;
+      padding: 1.2vw 5vw;
       border-radius: 25px;
       box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
       background-color: rgb(255, 255, 255);
@@ -170,7 +171,7 @@
     }
 
     input {
-      padding: 1.5vw 4vw;
+      padding: 1.2vw 6vw;
       border-radius: 25px;
       box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
       background-color: rgb(255, 255, 255);
@@ -216,7 +217,7 @@
       color: white;
     }
     .inputSpace {
-      height: 10vw;
+      height: 9vw;
     }
   }
 }
@@ -245,7 +246,7 @@
     }
 
     input {
-      padding: 0.6vw 3vw;
+      padding: 0.6vw 5vw;
       border-radius: 25px;
       box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
       background-color: rgb(255, 255, 255);
